// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkPopoverPortal Custom Portal props should render correctly with portalClassName added to portal component 1`] = `
<Portal
  beforeClose={[Function]}
  className="bpk-popover-portal my-custom-classname"
  isOpen={false}
  onClose={[Function]}
  onOpen={[Function]}
  onRender={[Function]}
  renderTarget={null}
  style={null}
  target={
    <div>
      target
    </div>
  }
  targetRef={null}
>
  <BpkPopover
    className={null}
    closeButtonIcon={true}
    closeButtonText="Close"
    id="my-popover"
    label="My popover"
    labelAsTitle={false}
    onClose={[Function]}
    padded={true}
  >
    <div>
      My popover content
    </div>
  </BpkPopover>
</Portal>
`;

exports[`BpkPopoverPortal Custom Portal props should render correctly with portalStyle added to portal component 1`] = `
<Portal
  beforeClose={[Function]}
  className="bpk-popover-portal"
  isOpen={false}
  onClose={[Function]}
  onOpen={[Function]}
  onRender={[Function]}
  renderTarget={null}
  style={
    Object {
      "color": "red",
    }
  }
  target={
    <div>
      target
    </div>
  }
  targetRef={null}
>
  <BpkPopover
    className={null}
    closeButtonIcon={true}
    closeButtonText="Close"
    id="my-popover"
    label="My popover"
    labelAsTitle={false}
    onClose={[Function]}
    padded={true}
  >
    <div>
      My popover content
    </div>
  </BpkPopover>
</Portal>
`;

exports[`BpkPopoverPortal should not render anything if target is a function 1`] = `null`;

exports[`BpkPopoverPortal should render correctly 1`] = `
<div>
  target
</div>
`;
